# chronos-crawler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  manage.py  mypy.ini  pyproject.toml
.github/: pull_request_template.md
chronos/application/task_queue/: run_service.py
chronos/core/: settings.py
chronos/core/providers/: configs.py  connections.py  factory.py  llm.py  managers.py  services.py  task_queue.py
chronos/infrastructure/: browser_use.py  nats_client.py
chronos/infrastructure/clients/: base.py  captcha.py  courier.py
chronos/infrastructure/storage/: aws_s3.py  base.py  local.py
chronos/infrastructure/task_queue/: base.py  run_service.py
chronos/main/api/: app.py  factory.py  native.py
chronos/main/cli/: app.py  factory.py
chronos/main/workers/: app.py  factory.py  native.py
chronos/presentation/api/: default_router.py  exceptions.py  root_router.py
chronos/presentation/api/services/: router.py  services.py
chronos/presentation/cli/: crawlers.py
chronos/presentation/workers/: router.py  run_service.py
chronos/schemas/: captchas.py  credentials.py
chronos/schemas/creators/: creators.py
chronos/schemas/enums/: captchas.py  platforms.py  providers.py
chronos/schemas/services/: run_service.py
chronos/services/: browser_use.py
chronos/services/captchas/: base.py
chronos/services/captchas/tiktok/: selectors.py  solver.py
chronos/services/crawlers/: base.py  stealth.py
chronos/services/crawlers/tiktok/: affiliate.py  (+2 more)
chronos/utils/: constants.py  helpers.py  module_loading.py
chronos/view_models/: base.py
compose/: stack.yml
docker/: Dockerfile
scripts/: format.sh  lint.sh
