[project]
name = "chronos"
version = "0.1.0"
description = ""
authors = [{ name = "Hiep Tran", email = "hieptt.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aiohttp = ">=3.11.16,<4.0.0"
boto3 = "^1.37.28"
boto3-stubs = "^1.37.28"
botocore = "^1.37.28"
browser-use =  ">=0.1.40,<0.2.0"
deepmerge = "^2.0"
dishka = ">=1.4.2,<2.0.0"
fake-useragent = "^2.2.0"
faker = "^37.1.0"
fastapi = "^0.115.12"
fastapi-pagination = "^0.12.34"
fastmcp = "^2.2.0"
faststream = "^0.5.39"
langchain = "^0.3.22"
loguru = ">=0.7.3,<0.8.0"
mypy-boto3 = "^1.37.0"
mypy-boto3-s3 = "^1.37.24"
nats-py = "^2.10.0"
nest-asyncio = "^1.6.0"
playwright =  ">=1.51.0,<2.0.0"
playwright-stealth = "^1.0.6"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
pyyaml = "^6.0.2"
redis = "^5.2.1"
scalar-fastapi = "^1.0.3"
starlette-context = "^0.4.0"
taskiq = "^0.11.16"
taskiq-faststream = "^0.2.0"
taskiq-nats = "^0.5.1"
taskiq-redis = "^1.0.4"
typer = ">=0.15.2,<0.16.0"
ua-parser = "^1.0.1"
user-agents = "^2.2.0"
uvicorn = "^0.34.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
deptry = "^0.21.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "3.8.0"
ruff = "^0.6.9"

[tool.poetry.scripts]
chronos = "chronos.main.cli.app:run_cli"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120
target-version = ['py312']
